--- a/AppPickerPizza/package.json
+++ b/AppPickerPizza/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "npx react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^1.9.11",
     "react": "16.13.1",
     "react-native": "0.63.4"
   },
